--- a/functions/package.json
+++ b/functions/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^5.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
