--- a/.github/workflows/daily-reminder.yml
+++ b/.github/workflows/daily-reminder.yml
@@ -24,18 +24,27 @@ jobs:
           npm -y init >/dev/null 2>&1 || true
           npm install firebase-admin@^12
 
-      - name: Send daily reminders (Firestore + FCM)
+      - name: Send daily reminders (Firestore + FCM + Email)
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+          MAIL_CONFIG_JSON: ${{ secrets.MAIL_CONFIG_JSON }}
         run: |
           node - <<'NODE'
           const admin = require("firebase-admin");
+          const tls = require('tls');
 
           // ---- init Admin SDK avec le secret GitHub ----
           const sa = JSON.parse(process.env.FIREBASE_SERVICE_ACCOUNT);
           admin.initializeApp({ credential: admin.credential.cert(sa) });
           const db = admin.firestore();
           const messaging = admin.messaging();
+
+          // ---- SMTP settings from MAIL_CONFIG_JSON ----
+          let SMTP = null;
+          try {
+            const raw = process.env.MAIL_CONFIG_JSON;
+            if (raw) SMTP = JSON.parse(raw);
+          } catch {}
 
           // ---- helpers date/jour & SR (même logique que ton app) ----
           const DAY_NORMALIZE = { dim:"DIM", lun:"LUN", mar:"MAR", mer:"MER", jeu:"JEU", ven:"VEN", sam:"SAM" };
@@ -294,6 +303,16 @@ jobs:
             return parts[0];
           }
 
+          function extractEmailList(profile){
+            const source = profile && typeof profile === 'object' ? profile : {};
+            const seen = new Set();
+            const emails = [];
+            const push = (v)=>{ const e = (v==null?null:String(v).trim()); if(!e) return; const k=e.toLowerCase(); if(seen.has(k)) return; seen.add(k); emails.push(e); };
+            if (Array.isArray(source.emails)) source.emails.forEach(push);
+            push(source.email);
+            return emails;
+          }
+
           function isInvalidToken(code){
             return code === "messaging/registration-token-not-registered" ||
                    code === "messaging/invalid-registration-token";
@@ -375,6 +394,7 @@ jobs:
             const tokensByUid = await collectTokensByUid();
 
             let totalSent = 0;
+            const emailResults = [];
             for (const [uid, tokSet] of tokensByUid.entries()){
               const tokens = Array.from(tokSet);
               const visibleCount = await countVisibleDaily(uid, ctx);
@@ -387,6 +407,7 @@ jobs:
               const profSnap = await db.doc(`u/${uid}`).get();
               const prof = profSnap.exists ? (profSnap.data() || {}) : {};
               const firstName = extractFirstName(prof);
+              const profileEmails = extractEmailList(prof);
               const userName = prof.name || prof.displayName || prof.slug || "toi";
               const title = firstName ? `${firstName}, rappel du jour 👋` : "Rappel du jour 👋";
               const body = buildReminderBody(firstName, visibleCount, objectiveCount);
@@ -422,8 +443,66 @@ jobs:
                 }
               });
               console.log(`uid=${uid} -> sent=${res.successCount}, failed=${res.failureCount}, visible=${visibleCount}, objectives=${objectiveCount}`);
+
+              // ---- Email (si config SMTP et au moins un objectif) ----
+              if (SMTP && Array.isArray(profileEmails) && profileEmails.length && objectiveCount > 0){
+                try {
+                  const { subject, text, html } = (function buildGoalReminderEmail(){
+                    const dateLabel = new Date().toLocaleDateString('fr-FR',{ weekday:'long', day:'numeric', month:'long', year:'numeric' });
+                    const formatted = dateLabel.charAt(0).toUpperCase()+dateLabel.slice(1);
+                    const subject = (objectiveCount>1? 'Rappel objectifs' : 'Rappel objectif') + ' — ' + formatted;
+                    const greeting = firstName? `Bonjour ${firstName},` : 'Bonjour,';
+                    const intro = objectiveCount>1? `Voici tes objectifs à réaliser le ${formatted} :` : `Voici ton objectif à réaliser le ${formatted} :`;
+                    const lines=[greeting,'',intro,`- ${objectiveCount} objectif(s)`, '', `Accède à ton espace : ${link}`,'','Bonne journée !'];
+                    const text = lines.join('\n');
+                    const html = [`<p>${greeting}</p>`,`<p>${intro}</p>`,`<ul><li>${objectiveCount} objectif(s)</li></ul>`,`<p><a href="${link}">Ouvrir mon suivi</a></p>`].join('');
+                    return { subject, text, html };
+                  })();
+
+                  // Minimal SMTP client (LOGIN) comme dans functions/index.js
+                  await (async function send(){
+                    const recipients = profileEmails;
+                    const socket = await new Promise((resolve, reject) => {
+                      const c = tls.connect({ host: SMTP.host, port: Number(SMTP.port)||465, rejectUnauthorized: true }, () => { c.setEncoding('utf8'); c.removeListener('error', onErr); resolve(c); });
+                      const onErr = (e)=>reject(e); c.once('error', onErr);
+                    });
+                    const wait = ()=> new Promise((res,rej)=>{ let buf=''; const onData=(ch)=>{ buf+=ch.toString(); const lines=buf.split(/\r?\n/).filter(Boolean); if(!lines.length) return; const last=lines[lines.length-1]; const m=last.match(/^(\d{3})([ -])/); if(!m) return; if(m[2]==='-') return; socket.removeListener('data',onData); res({ code:Number(m[1]), lines});}; const onErr=(e)=>{ socket.removeListener('data',onData); rej(e);}; socket.on('data',onData); socket.on('error',onErr); });
+                    const send = async (cmd, allow=[])=>{ socket.write(cmd+'\r\n'); const r=await wait(); if (!(r.code<400 && (!allow.length || allow.includes(r.code)))) throw new Error('SMTP failed '+cmd+' => '+r.code); return r; };
+                    await wait();
+                    await send(`EHLO ${SMTP.host}`);
+                    if (SMTP.user && SMTP.pass){ await send('AUTH LOGIN',[334]); await send(Buffer.from(SMTP.user).toString('base64'),[334]); await send(Buffer.from(SMTP.pass).toString('base64'),[235]); }
+                    await send(`MAIL FROM:<${SMTP.from}>`);
+                    for (const r of recipients){ await send(`RCPT TO:<${r}>`,[250,251]); }
+                    await send('DATA',[354]);
+                    const boundary = '=_gh_'+Date.now();
+                    const headers = [
+                      `From: ${SMTP.from}`,
+                      `To: ${recipients.join(', ')}`,
+                      `Subject: ${subject}`,
+                      'MIME-Version: 1.0',
+                      `Content-Type: multipart/alternative; boundary="${boundary}"`,
+                      `Date: ${new Date().toUTCString()}`
+                    ];
+                    const parts = [
+                      `--${boundary}\r\nContent-Type: text/plain; charset=utf-8\r\nContent-Transfer-Encoding: 8bit\r\n\r\n${text}\r\n`,
+                      `--${boundary}\r\nContent-Type: text/html; charset=utf-8\r\nContent-Transfer-Encoding: 8bit\r\n\r\n${html}\r\n`,
+                      `--${boundary}--\r\n`
+                    ];
+                    socket.write(headers.join('\r\n')+'\r\n\r\n'+parts.join('')+'\r\n.\r\n');
+                    const final = await wait();
+                    if (final.code>=400) throw new Error('SMTP delivery failed '+final.code);
+                    await send('QUIT',[221]);
+                    socket.end();
+                  })();
+                  emailResults.push({ uid, to: profileEmails, ok: true });
+                  console.log(`email uid=${uid} -> to=${profileEmails.join(',')}`);
+                } catch(e){
+                  emailResults.push({ uid, ok: false, error: e?.message });
+                  console.error('email error uid='+uid, e?.message);
+                }
+              }
             }
-            console.log("done: sent", totalSent);
+            console.log("done: push sent", totalSent);
           }
 
           main().catch(e => { console.error("fatal", e); process.exit(1); });
